src/main/scala/chapter10/compileroutput/JavaCatchOrder.output
// #output
JavaCatchOrder.java:10: error: exception StringIndexOutOfBoundsException
has already been caught
    catch(StringIndexOutOfBoundsException ex) { //ERROR
    ^
1 error
// #output
